kustomization/base/app-default.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: prod-redirect-to-wiki@kubernetescrd
spec:
  tls:
  - secretName: default-certs
    hosts:
    - '*.kotimme.cc'
  defaultBackend:
    service:
      name: grav
      port:
        name: grav
