kustomization/base/app-grafana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  tls:
  - secretName: grafana-certs
    hosts:
    - grafana.kotimme.cc
  rules:
  - host: grafana.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: grafana
---
apiVersion: v1
kind: Service
metadata:
    name: grafana
spec:
    ports:
      - name: grafana
        port: 80
        targetPort: grafana
    selector:
        app: grafana
    type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  serviceName: "grafana"
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsGroup: 1978
        fsGroup: 1978
      containers:
      - name: grafana
        image: grafana/grafana-enterprise:latest
        imagePullPolicy: Always
        ports:
        - name: grafana
          containerPort: 3000
        volumeMounts:
        - name: dir
          mountPath: /var/lib/grafana
          subPath: grafana
      imagePullSecrets: 
        - name: docker-hub
      volumes:
        - name: dir
          persistentVolumeClaim:
           claimName: nfs
