kustomization/base/app-homepage.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
spec:
  tls:
  - secretName: homepage-certs
    hosts:
    - homepage.kotimme.cc
  rules:
  - host: homepage.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              name: homepage
---
apiVersion: v1
kind: Service
metadata:
    name: homepage
spec:
    ports:
      - name: homepage
        port: 80
        targetPort: homepage
    selector:
        app: homepage
    type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  serviceName: "homepage"
  template:
    metadata:
      labels:
        app: homepage
    spec:
# Cannot be used with homepage
#      securityContext:
#        fsGroup: 1978
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: homepage
          containerPort: 3000
        volumeMounts:
        - name: dir
          mountPath: /app/config
          subPath: homepage/config
        - name: dir
          mountPath: /app/public
          subPath: homepage/public
#      imagePullSecrets:
#        - name: ghcr-io
      volumes:
        - name: dir
          persistentVolumeClaim:
           claimName: nfs
