kustomization/base/app-z2m.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2m
spec:
  tls:
  - secretName: z2m-certs
    hosts:
    - z2m.kotimme.cc
  rules:
  - host: z2m.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: z2m
            port:
              name: z2m
---
apiVersion: v1
kind: Service
metadata:
    name: z2m
spec:
    ports:
      - name: z2m
        port: 80
        targetPort: z2m
    selector:
        app: z2m
    type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: z2m
spec:
  replicas: 1
  selector:
    matchLabels:
      app: z2m
  serviceName: "z2m"
  template:
    metadata:
      labels:
        app: z2m
    spec:
      securityContext:
        fsGroup: 1978
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: devices
                operator: In
                values:
                - zigbee-coordinator
      imagePullSecrets:
      - name: docker-hub
      nodeSelector:
        devices: zigbee-coordinator
      containers:
      - name: z2m
        image: koenkk/zigbee2mqtt:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add:
            - SYS_ADMIN
          privileged: true
        ports:
        - name: z2m
          containerPort: 8080
        volumeMounts:
        - name: pvc-nfs
          mountPath: /app/data
          subPath: z2m
        - name: udev
          mountPath: /run/udev
          readOnly: true
        - name: coordinator
          mountPath: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_d26ec6380919ec119f4839cc47486eb0-if00-port0
      volumes:
      - name: pvc-nfs
        persistentVolumeClaim:
         claimName: nfs
      - name: udev
        hostPath:
          path: /run/udev
      - name: coordinator
        hostPath:
          path: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_d26ec6380919ec119f4839cc47486eb0-if00-port0
